# hs-android-helloworld

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/pre-build-libs/libiconv_prefix/arm64-v8a/lib/: libcharset.la  libiconv.la
app/pre-build-libs/libiconv_prefix/armeabi-v7a/lib/: libcharset.la  libiconv.la
app/pre-build-libs/libiconv_prefix/x86_64/lib/: charset.alias  libcharset.la  libiconv.la
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: android_hs_common.h  my_log.h  native-lib.cpp
app/src/main/hs/: Lib.hs
app/src/main/java/com/zw3rk/helloworld/: HsApp.kt  MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
